# Gtk_tutorial_C

./: README.md
Glib_example/: CMakeLists.txt  example.c  example.c.save
Glib_example/b/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  example  rules.ninja
about_dialog/: CMakeLists.txt  about_dialog.c  window_main.glade  window_main.glade~
about_dialog/b/: .ninja_deps  .ninja_log  CMakeCache.txt  about_dialog  build.ninja  cmake_install.cmake  rules.ninja
get_pointer_widgets/: CMakeLists.txt  pointer_struct.c  pointer_struct.glade
get_pointer_widgets/b/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  pointer_struct  rules.ninja
heads_tails_game/: CMakeLists.txt  heads_tails.c  heads_tails.glade  heads_tails.glade~
heads_tails_game/b/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  heads_tails  rules.ninja
hello/: CMakeLists.txt  hello.c  hello.glade  hello.glade~
hello/b/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  hello  rules.ninja
image_viewer/: CMakeLists.txt  image_viewer.c  window_main.glade~
image_viewer/b/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  image_viewer  rules.ninja
text_reader/: CMakeLists.txt  text_reader.c  window_main.glade  window_main.glade~
text_reader/b/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  (+2 more)
toggle_button/: CMakeLists.txt  toggle_button.c  window_main.glade
widget_poiter/: CMakeLists.txt  widget_poiter.c  widget_poiter.glade~
(+14 files in other folders)
